<resources>
    <string name="app_name">architecture-module-library</string>
    <string name="carls_alert">Alert</string>
    <string name="carls_confirm">Confirm</string>
    <string name="carls_cancel">Cancel</string>
    <string name="carls_select">Select</string>
    <string name="carls_okay">Okay</string>
    <string name="carls_kisok_mode">Kisok Mode</string>
    <string name="carls_remove_device_owner">Remove Device Ownership</string>
    <string name="carls_remove_device_owner_msg">Do you want to remove device ownership ?</string>
    <string name="carls_device_admin_warning">Warning: Device Admin is going to be disabled.</string>
    <string name="carls_device_admin_description">Kiosk Example Admin Description</string>
    <string name="carls_package_name_unavailble">Package name is unavailable</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="carls_change_passcode">Change Passcode</string>
</resources>
